docs: 26강. 유저 대출 현황 보여주기 - 테스트 코드 개발

--- a/study/단축키모음.md
+++ b/study/단축키모음.md
@@ -1,12 +1,15 @@
 
-| 단축키                                  |          설명          | 
-|:-------------------------------------|:--------------------:|
-| Command (⌘) + Shift (⇧) + O          |        파일 검색         |
-| Command (⌘) + Shift (⇧) + F          |        전체 검색         |
-| fn + Command (⌘) + Down Arrow (↓)    |     마지막 라인으로 이동      |
-| Command (⌘) + N                      |        파일 생성         |
-| Control (⌃) + R                      |      코드 실행(Run)      |
-| Shift (⇧) + Enter                    |  현재 커서 위치에서 다음 줄 이동  |
-| Option (⌥) + Command (⌘) + L         |       코드 자동 정렬       |
-| Control (⌃) + Option (⌥) + O        |   import는 자동으로 제거    |
-| Command (⌘) + 1      |  Project Tool Window |
+| 단축키                               |         설명          | 
+|:----------------------------------|:-------------------:|
+| Command (⌘) + Shift (⇧) + O       |        파일 검색        |
+| Command (⌘) + Shift (⇧) + F       |        전체 검색        |
+| fn + Command (⌘) + Down Arrow (↓) |     마지막 라인으로 이동     |
+| Command (⌘) + N                   |        파일 생성        |
+| Control (⌃) + R                   |     코드 실행(Run)      |
+| Control (⌃) + Shift (⇧) + R       |   코드 실행(Run Test)   |
+| Shift (⇧) + Enter                 | 현재 커서 위치에서 다음 줄 이동  |
+| Option (⌥) + Command (⌘) + L      |      코드 자동 정렬       |
+| Control (⌃) + Option (⌥) + O      |   import는 자동으로 제거   |
+| Command (⌘) + 1                   | Project Tool Window |
+| Command (⌘) + E                   |    최근에 열었던 파일 목록    |
+| Command (⌘) + K                   |      커밋 메시지 창       |
